# ChangeLog for sys-power/powertop
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.93 2013/10/03 04:44:26 zerochaos Exp $

  03 Oct 2013; Rick Farina <zerochaos@gentoo.org>
  +files/powertop-2.4-tinfo.patch, powertop-2.4.ebuild, powertop-9999.ebuild:
  fix for bug #486124 thanks to Jeroen

  06 Sep 2013; Markus Meier <maekke@gentoo.org> powertop-2.4.ebuild:
  arm stable, bug #445214

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> powertop-2.4.ebuild:
  Stable for sparc, wrt bug #445214

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> powertop-2.4.ebuild:
  Stable for x86, wrt bug #445214

  04 Sep 2013; Agostino Sarubbo <ago@gentoo.org> powertop-2.4.ebuild:
  Stable for ppc, wrt bug #445214

  03 Sep 2013; Rick Farina <zerochaos@gentoo.org> powertop-9999.ebuild:
  updating 9999 to match already fixed 2.4 wrt bug 477280

  03 Sep 2013; Rick Farina <zerochaos@gentoo.org> -powertop-2.3.ebuild,
  powertop-9999.ebuild:
  remove old ebuild, update HOMEPATE

  03 Sep 2013; Agostino Sarubbo <ago@gentoo.org> powertop-2.4.ebuild:
  Stable for amd64, wrt bug #445214

  08 Aug 2013; Rick Farina <zerochaos@gentoo.org> powertop-2.4.ebuild:
  fix deprecated kernel config check

*powertop-2.4 (24 Jul 2013)

  24 Jul 2013; Rick Farina <zerochaos@gentoo.org> +powertop-2.4.ebuild,
  powertop-2.3.ebuild:
  version bump per bug 477992

  20 Jul 2013; Rick Farina <zerochaos@gentoo.org> -powertop-2.2-r1.ebuild,
  -powertop-2.2-r2.ebuild, powertop-2.3.ebuild:
  migrate USB_SUSPEND to PM_RUNTIME per bug 477280

  28 Apr 2013; Rick Farina <zerochaos@gentoo.org> powertop-1.13.ebuild:
  powertop 1.x has been staying around longer than I orginally thought, fixing
  libintl rdep like powertop2

  08 Apr 2013; Rick Farina <zerochaos@gentoo.org> powertop-2.3.ebuild,
  powertop-9999.ebuild:
  more fixes, maybe this makes everyone happy? who knows
