@@ -1,5 +1,5 @@
 DEFINED_PHASES=configure install prepare setup unpack
-DEPEND=dev-libs/libnl:3 sys-apps/pciutils sys-libs/ncurses[unicode?] virtual/pkgconfig sys-devel/gettext dev-vcs/git || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DEPEND=dev-libs/libnl:3 sys-apps/pciutils sys-libs/ncurses[unicode?] virtual/pkgconfig sys-devel/gettext || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool dev-vcs/git
 DESCRIPTION=tool that helps you find what software is using the most power
 EAPI=5
 HOMEPAGE=https://01.org/powertop/
@@ -8,4 +8,4 @@ LICENSE=GPL-2
 RDEPEND=dev-libs/libnl:3 sys-apps/pciutils sys-libs/ncurses[unicode?] X? ( x11-apps/xset ) virtual/libintl
 SLOT=0
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	git-2	9d623256bd82ddbcc6783ae996e178fd	git-r3	13649b380799fe7e817b2db8811c54cd	libtool	b1c8688e60f9580bcb9bb46e08737eb1	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	3e30ef439a720915f8f4fd4fe75f704c	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=778044940d758da6b0022bd7fd1352a9
+_md5_=3e4b69be5eda751fecaad5ab9be2070f
