@@ -12,24 +12,24 @@ AUX powertop-2.4-tinfo.patch 580 SHA256 fc1c7238d5c386c0f28ff003e998b6657826f8b3
 DIST powertop-1.13.tar.gz 104675 SHA256 2bc866089496877dd26d2d316ad5763ab8ecb5e28aefba44bc5d355dcdc58d98 SHA512 0c22a903da64798d987492336d57260372e03eab067ad94cf30b7640e9ee05e759a2fe9fa48fbdc35404cd2782b6b29d705e11e68452653b08f7f9df1a52be44 WHIRLPOOL 5ba44b84f49609f67c32563f75e20f6576c21a93fcb1ca99ebfe064475397602aa0f0fb9575e05b5a0290983791e7cf6ebae0139b39158b962e4b51027a6f5aa
 DIST powertop-2.4.tar.gz 632390 SHA256 42796c94546ae7f3d232e41b7fa09b2532396ca389908ff528870311db6327b7 SHA512 988732b199a288ef1b7c73e49857a7aab0fdc0b9f04a1d218e47fc9ba5e9af3da5bf91a4dc1473d33c9b83d7d238006a9786f4178d71cc21a6dad0c33b2cb864 WHIRLPOOL ee3d4b8671a08537cc6b178771699fb3215ef784120d33606f205c1b9c967a87a1e4bd6b948cc1fb651accb60b5ec832fda10d0deb05181087b15fc1a7a529c9
 EBUILD powertop-1.13.ebuild 1158 SHA256 b996887bff17065a57aac201aac438a2c6310f5423109e4cb62de10c3e3dfdfd SHA512 c1ed8ee2fd7416138b9ab84072766071047e557ffc35fc57d32d8e4dc86f8986fa3a642f1875e2cf929eeabeb8a0b20025babc27808602b1123c970869c51146 WHIRLPOOL 570c6c80e97351859f9758b581a103a1a98d6c5ee58a63b4277431f21bcef9bed94ee35e3ed0193259a44978aa7aac717c597db4cba2aaa2d201ffe13998610f
-EBUILD powertop-2.4.ebuild 3412 SHA256 414dffe316e0dfd0ad8de5a131f3cbda959be105d23b7621669f7d33e5126a50 SHA512 d85406f73b6093abecf0648faa3765cab2289a5a0f48e89b805e9de057ec3a398bf1f0fe10ad27ceac93ff158a5922f510f5368acb2def1ddfc35152fcaf1cf2 WHIRLPOOL cbad3eab03e16055d243605263c2ae92d0bedea7068bc8d3ffdd1f3a8bd823f5aa5912946d89de3fda95afbc68f5cc6aad4b9a87db69d013670214eec8ed8e3b
-EBUILD powertop-9999.ebuild 3419 SHA256 fef1b207f8e11292194de6de4abf0ae2733765bbd0f1df9221ef69b55be8de61 SHA512 53e8e3c43514e42ef08a3c3ff4b3b497dda59740c54b8482854f676c1570335bd5251edda690216e8ed121fd86763d5846c612f36a6c6800d71acf0f7f7f99b2 WHIRLPOOL 59dcf4ecaf542b2c7d738e220ce622fb0a095861bb8bbf5b5eff3c66b2be3069ec4f3fefa325071395d85c79f1b63a52638bb4fe2dd145e1481bd46432b56fa9
-MISC ChangeLog 13719 SHA256 4e05ffb631d057fbee9d24cf0cc4fb1bf64a56059769b9329d40ce5076eecd95 SHA512 0dc75625046d43c701dc4eff33a1c0aa9c61ee009fbebf02554df4b60d91c009cd837e32c84396a7c740eb61fc70586b6a6748d5e29f0872bbd59b426c561230 WHIRLPOOL ae33bc9132a9dfbebe50f4a928022992026986f93cdea3a1b2ea05ff17692711da40ba276937cf4c0ebf6749030eed2239074454be968dee321d72406dcc95ff
+EBUILD powertop-2.4.ebuild 3384 SHA256 89b700e38e31b6f23923247f4e3727a6eb9bbe05cc988e6d1aa6abcf91dd4187 SHA512 a1de133cbcd1b9e732cc7e693e68454827b2fd709b336d51a623e845180633f8dde63c89763510916fbde2c8979032c1fc49ab1e8c9ad91f0926ebf4f0c21800 WHIRLPOOL 2576849f92ae6e3495c3643da5e46effaf4abb0b4388d63f9d627083fab6b8b977ff4022259f0abb4a3547df1099d8f2ba5a53eb60c9f2cea82bb04febe5c4b1
+EBUILD powertop-9999.ebuild 3391 SHA256 bc88977f5a2b69c914f18cc75c10e325f4cdf8bcfdb4fd13647fb0c5c93ee1d7 SHA512 07a6801c5e32122eb53bdee0b1c12bed28d4a66ffc6ba53a97de17146084c4c806688746b2b9cc72f424ee5da276697f434a43e13ac144641b1fd87de9a9714f WHIRLPOOL 24c8e38fc0f289cd92867d873a940b3d3dfb9e0591299731e9c833046d4b81bcf439b3a5bc2fd31c5499642672f49c94f1aeccdb2b0333fb3c44425670440159
+MISC ChangeLog 13900 SHA256 cba52a79eccc718487dde7c5edb2607ccdfe9b532036cb2c8708e2402e069ae3 SHA512 026667354204c29150e3f0867142e9b8b95e5024eb194d33f19e8c0b1e45e8948962b8d626f97f81dfaf3bf71e960bb9ab252d6974b85e5db880b7ac02007986 WHIRLPOOL f5171c73885f359be700b399e9f5a6ff94b40d2c397228bfa1e735caf1d0a9e381c7afc2398e8b6403a3ce2f6f1dd6dbbc5daa6077ec86c3cc6b10998c4e30c0
 MISC metadata.xml 239 SHA256 24d3268dbe675a5446456b139438c1bd59bd6190077399a4a715805ef28da3cc SHA512 2fa025f3394a125b4a92ee5fdb579bcfe74755f4e4306d90979bbb04c5239adfd2fdf9242ee7623642909597100ca88a6f6b7578a24512d976930fad186e10f9 WHIRLPOOL ab1b126e1a8170eba68412f8704d38ac7a479cb80a461cb2466ad87966ab8f78ddc04ce66341e5056df8c3aa21e3cf2c530a1f3236461bb502b91842089b49bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSTPbCAAoJEKXdFCfdEflKTV8P/A/6sr5Tlvzl+rFAV2KESSdO
-3wR86VA89eQicVM3vvNtc7/xL09CLdx/XeryHr1fCNfegWL+BCVmY2bDDhr31tcZ
-qgmzmGSP5k/bSOiGr3yePA6QfLQutAlBuf2i3j0AQKBTiw9tNGsD711gciHMdDbt
-gUspm0haZRx3+MrEDaic8vedNMwjvSB33K2mZQEIMv9ZXJQQOOviT024WCNTehMV
-R2K3uiyghPAlhQocESzls7H62NkDVyG+yg5TCaYQX0T1ZNHf7urOVOBF1xzlfNqM
-hawx79BDVh64qXClFMYPVGLAIV+3ASyLE8Ami5HDVaFUQR4+YsioXBMT9tkpXcR6
-IPL1GW4B8fzypWrmZV8jg8n2P1vublguwzKHTPbrgtyldvn56CaSENIYm/ELDaNn
-WHad8xmMIJL4Tgw2dK6pK1XK9kilOoTCZ5lRWS+DA90R0klk5aM7LZDV8LvixSok
-lKypnb4fbW/1G+tAVfZz8yxXn3tkdDSORcVFX3AfFeBGV5R3Qjb4TP3T+94Wh0L2
-MgNO3J9Bz+FNVLTOEt5aF/eqCLQhzrkOffQdw6mQx4vl6ODag0T2tCPgHKverAJn
-jnWsxyNvQM4i3tEFLkeBICKZHeTRYPk14iAaVi+BiINc4s0mEvWNFIBJWQR2dTJv
-NjFOcG/4bwBhK92aISn/
-=gBOT
+iQIcBAEBCgAGBQJSTctxAAoJEKXdFCfdEflKZ+8P/3yRuv2x+ZErTMh2RX9BFMMO
+EUJjCBEh5KKLZ/383HPruUPwr7zZx8vNIknLPvRip0lburos6SKA+yUBrtd3l9QP
+UIiuQIbjxV4W/OBrNOjeJbXpTSTSnJOoOtkWsNDmbgaAlPHwV4cPvLvcJP01LMwh
+CuebjdEDka2meZ7IDoBg09OJWeoAyobtEo3iW08JClkZm4EGwJX0LebGWGz2Rflg
+F1eFkTXnT8eGL0k1i7NKYmmsYMAHPeH03DuvrhI+mgbS74FH/c0vDY1bl9sjidD5
+ffwqzdLEccPUhf2P2SIAN8LF00RuhntZDIj0k23n/liKk/JXpEX1EbwjRftGEJyy
+DAbCnNChWntC0iUi87Q2Q/GpZD9zZ18CLOnc1IxfqlwZIGjkx5p6cCc5wA07NPQ8
+qdlWkw+IJ8PSv9OtwazGDKThdzzEOodNUGVKLp8LtE3ZpQb3PxiUOATgePN2BdRG
+BfzzJMvP7ncStJpR/1dEGnYi+FOdaagYynfBg9gV2HdScZXsNjwgBTkKXGAQrPDt
+MTB6V7enYOjY/mMCIIIS59JOUccie6l18sdrlxyTR7K4bLzYU1Ow8Nl/bOWlKyit
+JCk4fFHFIv7KV67U54Tfx5AwTewCe5NkFRnKUB7k2DMXamYXtBJiS0AgfTWz0etZ
+TTdzpv0BdNNpT47+JM+j
+=cKhZ
 -----END PGP SIGNATURE-----
