@@ -1,10 +1,10 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/powertop-2.4.ebuild,v 1.8 2013/10/03 04:44:26 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/powertop-2.4.ebuild,v 1.9 2013/10/03 19:51:51 zerochaos Exp $
 
 EAPI="5"
 
-inherit eutils linux-info
+inherit eutils linux-info autotools
 if [[ ${PV} == "9999" ]] ; then
 	EGIT_REPO_URI="git://github.com/fenrus75/powertop.git"
 	inherit git-2 autotools
@@ -89,9 +89,7 @@ pkg_setup() {
 
 src_prepare() {
 	epatch "${FILESDIR}"/powertop-2.4-tinfo.patch
-	if [[ ${PV} == "9999" ]] ; then
-		eautoreconf
-	fi
+	eautoreconf
 }
 
 src_configure() {
