@@ -1,6 +1,11 @@
 # ChangeLog for sys-power/powertop
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.93 2013/10/03 04:44:26 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.94 2013/10/03 19:51:51 zerochaos Exp $
+
+  03 Oct 2013; Rick Farina <zerochaos@gentoo.org> powertop-2.4.ebuild,
+  powertop-9999.ebuild:
+  proper fix for bug #486124, thanks again to Jer for pointing out obvious
+  failure
 
   03 Oct 2013; Rick Farina <zerochaos@gentoo.org>
   +files/powertop-2.4-tinfo.patch, powertop-2.4.ebuild, powertop-9999.ebuild:
